--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*2017-02-26.</span><br />
+			<span class="space"/><span class="comments">*2017-01-01.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			<span class="keyword">Boy name = ***</span><br />
-			<span class="keyword">Girl name = aiasti</span><br />
+			<span class="keyword">Boy </span><br />
+			<span class="keyword">Girl </span><br />
 			<span class="keyword">Fall in love river. </span><br />
 			<span class="comments">// The boy loves the girl;</span><br />
 			<span class="comments">// The girl loves the boy;</span><br />
@@ -46,13 +46,13 @@
 			<br>
 			<br>
 			<span class="keyword">I want to say:</span><br />
-			<span class="keyword">XXX, I love you forever;</span><br />
+			<span class="keyword">I love you forever;</span><br />
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的，这是我们相爱在一起的时光。
+					亲爱的，这是我们在一起的时光。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
